@@ -22,6 +22,7 @@ gateway = 10.6.7.1
 #nat-iface = eth0
 
 [deploy]
+#image-repo = TODO
 # auto-create | auto-download | ask
 image-missing-action = auto-download
 
